edition = "2023";

package edge;

message ConnectionResponse {
  // 0 = success, non-zero = error
  uint64 session_id = 1;
  uint32 return_code = 2;

  // Explicitly optional failure reason
  string failure_reason = 3;
}
